# localserver

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  setup.cfg
localserver/: __main__.py  main.py
tests/: test_server_startup.py
