[metadata]
name = localserver
version = 0.2.0
description = A HTTP filesystem server
long_description = file: README.md
long_description_content_type = text/markdown
author = eyetheekh
author_email = eyetheekhsp@gmail.com
url = https://gitlab.com/eyetheekh/localserver/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
    localserver = localserver.__main__:main
